--- a/html/assets/css/main.scss
+++ b/html/assets/css/main.scss
@@ -117,9 +117,9 @@ h1, h2, h3, h4, h5, h6 {
 
 		@include media-desktop {
 			position: absolute;
-			font-size: 2.5rem;
-			line-height: 1.2em;
-			max-width: 265px;
+			font-size: 2.25rem;
+			line-height: 1.4em;
+			max-width: 285px;
 			top: 120px;
 		}
 
